# PTSD-Practice-Giraffe-Adventure

./: CMakeLists.txt
Resources/: 骨架.txt
include/: AnimatedCharacter.hpp  Character.hpp
include/Blocks/: AirBlock.hpp  Block.hpp  FootBlock.hpp  LuckyBlock.hpp  OriginalBlock.hpp  PipeBlock.hpp
include/Enums/: BlockType.hpp  ItemType.hpp  MarioState.hpp  MonsterType.hpp  ObjectType.hpp  WayType.hpp
include/Flags/: Flag.hpp
include/Items/: CoinItem.hpp  FireFlowerItem.hpp  Fireball.hpp  ItemObject.hpp  MushroomItem.hpp
include/Managers/: BlockManager.hpp  CollisionManager.hpp  GravityManager.hpp  ItemManager.hpp  MarioManager.hpp  MonsterManager.hpp  SceneManager.hpp
include/Mario/: Mario.hpp
include/Monsters/: BlackTurtle.hpp  EatFlower.hpp  FlyTurtle.hpp  JumpTurtle.hpp  Kooper.hpp  Monster.hpp  Mushroom.hpp  Turtle.hpp
include/Object/: ICollisionObject.hpp  IGravityObject.hpp
src/: AppStart.cpp  AppUpdate.cpp
